# haeo

./: .cursorrules  .gitattributes  .gitignore  .prettierignore  .prettierrc.js  .prettierrc.json  AGENTS.md  CONTRIBUTING.md  HOME_ASSISTANT_AUTOMATION_GUIDE.md  README.md  RELEASE_NOTES_v0.4.0-beta1.md  apex.yaml  codecov.yml  conftest.py  fix_imports.py  hacs.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  with_time.md  without_time.md
.cursor/commands/: release-notes.md  update-version.md
.cursor/plans/: add_time_param_to_optimize_9d5a5a5f.plan.md  auto-optimize_as_input_7670b367.plan.md  capture_optimization_input_values_b19e9cdf.plan.md  chooseselector_suggested_value_693e65d5.plan.md  context_with_timestamps_eee0b73f.plan.md  discrete_vs_continuous_forecasts_6d4710b2.plan.md  fix_required_energy_algorithm_bf852afc.plan.md  network_configuration_refactor_f679b3e1.plan.md  optimization_control_features_2bb7e8cf.plan.md  optimizationinput_refactor_891a7efa.plan.md  parameterized_historical_diagnostics_75387c5e.plan.md  refactor-to-core-and-integration-570cb7a1.plan.md  save_diagnostics_service_d60d3a40.plan.md  self-sufficiency_reserve_feature_044d0dd1.plan.md  simplify_time_alignment_1bc05a14.plan.md  time_step_alignment.plan.md  total_consumption_calculation_cc3bb8ef.plan.md
.github/: FUNDING.yml  copilot-instructions.md
.github/agents/: TestAudit.agent.md  TestAuditApply.agent.md
.github/instructions/: config-flow.instructions.md  documentation.instructions.md  elements.instructions.md  integration.instructions.md  manifest.instructions.md  meta.instructions.md  model.instructions.md  playwright-mcp.instructions.md  python.instructions.md  scenarios.instructions.md  tests.instructions.md  translations.instructions.md
.github/prompts/: coverage.prompt.md  lint.prompt.md  release-notes.md  release-notes.prompt.md  update-docs.prompt.md  update-version.prompt.md
.github/workflows/: backfill-release-docs.yml  ci.yml  copilot-setup-steps.yml  docs.yml  guides.yml  release.yml
.plans/: 00-overview.md  01-input-entities.md  02-element-coordinator.md  03-network-coordinator.md  04-remove-echoed-inputs.md  05-coordinator-data-structure.md  __init__.py  check_audit_coverage.py  generate_test_audit.py  model-layer-simplification.md  pytest-collect-nodeids.txt  pytest-collect.txt  reactive-model-architecture.md  test-audit.md
config/: .gitignore  configuration.yaml  transform_sensor.py
custom_components/haeo/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  ha_state_machine.py  horizon.py  icons.json  input_stores.py  manifest.json  network.py  number.py  quality_scale.yaml  repairs.py  sensor.py  sensor_utils.py  services.py  services.yaml  switch.py  system_health.py  validation.py  websocket_api.py
docs/: index.md  review-notes.md
docs/api/: config-flow.md  coordinator.md  data-loaders.md  index.md  sensors.md
docs/developer-guide/: adapter-layer.md  architecture.md  config-flow.md  contributing.md  coordinator.md  data-loading.md  documentation-guidelines.md  energy-models.md  horizon-manager.md  index.md  inputs.md  intent-engine.md  local-sim.md  policy-compilation.md  reserve-power.md  setup.md  tariff-compilation.md  testing.md  typing.md  units.md  vlan-optimization.md
docs/issues/: time-step-alignment.md
docs/javascripts/: coffee.js  guide-slideshow.js  katex.js  mathjax.js  mermaid-config.js
docs/modeling/: battery.md  connections.md  grid.md  index.md  loads.md  net-entity.md  node.md  objective-function.md  overview.md  photovoltaics.md  power-balance.md  shadow-prices.md  solver-philosophy.md  tagged-power.md  time-horizons.md
docs/reference/: configuration-schema.md  elements.md  entities.md  index.md  limitations.md  sensors.md  solvers.md
docs/stylesheets/: extra.css  guide.css
docs/user-guide/: alternatives.md  automations.md  configuration.md  connections.md  data-updates.md  forecasts-and-sensors.md  historical-load-forecast.md  index.md  installation.md  lovelace-card.md  optimization.md  removal.md  troubleshooting.md
docs/walkthroughs/: adding-an-ev.md  battery-inventory-costs.md  historic-diagnostics.md  index.md  power-policies.md  sigenergy-system.md
frontend/haeo-forecast-card/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  rolldown.config.mjs  tsconfig.json  vitest.config.ts
haeo_core/: pyproject.toml
haeo_core/model/: __init__.py  const.py  network.py  node.py
haeo_core/model/util/: broadcast_to_sequence.py  percentage_to_ratio.py
haeo_core/tests/: test_connections.py  test_element_base.py  test_elements.py  test_network.py  test_scenarios.py
haeo_core/tests/test_data/: __init__.py  battery.py  connection.py  grid.py  load.py  node.py  photovoltaics.py
stubs/highspy/: __init__.pyi  highs.pyi
stubs/pulp/: __init__.pyi  pulp.pyi
test_audit/: _template.md  conftest.md
test_audit/elements/: conftest.md
test_audit/flows/: conftest.md
test_audit/model/: conftest.md
test_audit/scenarios/: conftest.md
test_audit/test_coordinator/: test_apply_auto_optimize_state_pauses_horizon_manager.md  (+58 more)
tests/: conftest.py  import_contracts.py  test_assemble_docs.py  test_coordinator.py  test_data_loading.py  test_device_removal.py  test_diag_cli.py  test_diagnostics.py  test_edge_cases.py  test_forecast_parser.py  test_init.py  test_input_entities.py  test_loaders.py  test_model.py  test_network.py  test_network_validation.py  test_number.py  test_repairs.py  test_sections.py  test_sensor.py  test_sensor_utils.py  test_services.py  test_snapshot_cli.py  test_switch.py  test_system_health.py  test_time_shift.py  test_transform_sensor.py  test_translations.py
tools/: __init__.py  assemble_docs.py  build_docs.py  diag.py  guide_fence.py  guide_hashing.py  guide_runner.py  import_contracts.py  live_hass.py  mkdocs_guide_hook.py  profile_ranging.py  profile_ranging_config.py  sim.py  sim_hass.py  snapshot.py  time_shift.py
wasm/: README.md  build.sh  haeo-core-pyproject.toml  solver_shim.py  test_all_scenarios.js  test_haeo.js
(+2049 files in other folders)
