[project]
name = "haeo-modelling"
version = "0.1.0"
description = "Home Assistant Energy Network Optimizer"
readme = "README.md"
requires-python = ">=3.13.2"

dependencies = ["numpy>=2.2.2", "pulp[open-py]>=3.3.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<=8.4.1",
    "pytest-cov>=6.1.1,<=6.2.1",
    "ruff>=0.13.1",
    "mypy>=1.18.2",
    "homeassistant>=2025.4.4",
    "pytest-homeassistant-custom-component>=0.13.260,<=0.13.281",
    "freezegun>=1.5.0",
]

[tool.ruff]
required-version = ">=0.13.0"
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Enable ALL rules and selectively ignore overly strict ones
select = ["ALL"]

# Ignore overly strict or unwanted rules
ignore = [
    'COM812',  # Formatter already deals with trailing commas
    'D202',    # Blank lines after docstring are fine
    'D203',    # Don't put a newline between the class and docstring (D211 is used instead)
    'D213',    # Multiline docstrings have an empty first line (Incompatible with D212)
    'PLR0913', # Parameter limits are a something for code review not linting
]

[tool.ruff.lint.isort]
known-first-party = ["haeo"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]

"tests/**/*.py" = [
    'S101',  # Assert is allowed in tests
    'B011',  # Assert false is allowed in tests
    'PT015', # Assert that always fails is fine in a test
]

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-statements = 60

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
follow_imports = "normal"
follow_untyped_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pulp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config", "--disable-warnings"]
markers = [
    "asyncio: marks tests as requiring asyncio (deselect with '-m \"not asyncio\"')",
]
