[project]
name = "haeo"
version = "0.1.0"
description = "Home Assistant Energy Network Optimizer"
readme = "README.md"
requires-python = ">=3.13.2,<3.14"

dependencies = ["homeassistant>=2025.4.4", "numpy>=2.2.2", "pulp[highs]>=3.3.0"]

[dependency-groups]
dev = [
    "freezegun==1.5.2",
    "matplotlib>=3.10.7",
    "mdformat-beautysh>=1.0.0",
    "mdformat-config>=0.2.1",
    "mdformat-footnote>=0.1.1",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-mkdocs>=4.4.2",
    "mdformat-myst>=0.2.2",
    "mdformat-pyproject>=0.0.2",
    "mdformat-ruff>=0.1.3",
    "mdformat-simple-breaks>=0.0.1",
    "mdformat-tables>=1.0.0",
    "mdformat>=0.7.22",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.5.47",
    "mkdocs>=1.6.1",
    "mypy>=1.18.2",
    "pytest-cov>=6.1.1,<=6.2.1",
    "pytest-homeassistant-custom-component>=0.13.260,<=0.13.294",
    "pytest>=8.3.5,<=9.0.1",
    "ruff>=0.13.1",
    "setuptools>=80.9.0",
    "syrupy>=4.9.1",
]

[tool.ruff]
required-version = ">=0.13.0"
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Enable ALL rules and selectively ignore overly strict ones
select = ["ALL"]

# Ignore overly strict or unwanted rules
ignore = [
    'COM812',  # Formatter already deals with trailing commas
    'D202',    # Blank lines after docstring are fine
    'D203',    # Don't put a newline between the class and docstring (D211 is used instead)
    'D213',    # Multiline docstrings have an empty first line (Incompatible with D212)
    'PLR0913', # Parameter limits are a something for code review not linting
    'PLR0915', # Too many statements is something for code review not linting
    'PLR0912', # Too many branches is something for code review not linting
    'C901',    # Complexity is not a good linting rule, it should be a code review issue
    'TC001',   # Don't use TYPE_CHECKING blocks
    'TC002',   # Don't use TYPE_CHECKING blocks
    'TC003',   # Don't use TYPE_CHECKING blocks
    'BLE001',  # Do not catch blind exception - integration code needs to handle various exception types gracefully (127+ violations)
    'ANN401',  # Dynamically typed expressions - legitimate use of Any for **kwargs parameters
    'TRY300',  # Consider moving statement to else block - overly pedantic about code structure
    'TRY301',  # Abstract raise to inner function - overly pedantic, creates unnecessary indirection
    'PLR0911', # Too many return statements - something for code review not linting
]

[tool.ruff.lint.isort]
known-first-party = ["haeo", "haeo_core"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]

"stubs/**/*.pyi" = [
    'N802',   # Function name should be lowercase - PuLP uses camelCase (e.g., getSolver)
    'N803',   # Argument name should be lowercase - PuLP uses camelCase (e.g., lowBound)
    'N815',   # Variable in class scope should not be mixedCase - PuLP uses mixed case
    'A002',   # Argument shadows a Python builtin - stub files reflect actual API
    'ARG001', # Unused function argument - stub signatures must match actual API
    'ARG002', # Unused method argument - stub signatures must match actual API
]

"tests/**/*.py" = [
    'S101',    # Assert is allowed in tests
    'B011',    # Assert false is allowed in tests
    'PT015',   # Assert that always fails is fine in a test
    'SLF001',  # Accessing private methods is ok in testing
    'ARG001',  # Unused function argument - test fixtures often provide unused parameters for setup
    'PLR2004', # Magic value used in comparison - test assertions often use simple numeric values
    'S110',    # Try-except-pass detected - test exception handling patterns differ from production code
    'SIM105',  # Use contextlib.suppress instead of try-except-pass - test exception handling patterns differ
    'BLE001',  # Do not catch blind exception - test code needs to handle various exception types
]

"haeo_core/tests/**/*.py" = [
    'S101',    # Assert is allowed in tests
    'B011',    # Assert false is allowed in tests
    'PT015',   # Assert that always fails is fine in a test
    'SLF001',  # Accessing private methods is ok in testing
    'ARG001',  # Unused function argument - test fixtures often provide unused parameters for setup
    'PLR2004', # Magic value used in comparison - test assertions often use simple numeric values
    'S110',    # Try-except-pass detected - test exception handling patterns differ from production code
    'SIM105',  # Use contextlib.suppress instead of try-except-pass - test exception handling patterns differ
    'BLE001',  # Do not catch blind exception - test code needs to handle various exception types
]

"haeo_core/__init__.py" = [
    'D104',    # Missing docstring in public package - core root package
]

[tool.pyright]
stubPath = "stubs"
typeCheckingMode = "strict"


[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-statements = 60

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
follow_imports = "normal"
follow_untyped_imports = true
explicit_package_bases = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
# In our tests, we often overwrite methods on classes to mock out behavior.
# This is a common pattern in Python, but mypy doesn't like it. This override
# silences those errors, but only for the tests module.
# See discussion here:
# https://github.com/python/mypy/issues/2427
disable_error_code = "method-assign"
module = "tests.*"

[tool.pytest.ini_options]
timeout = 5
testpaths = ["tests", "haeo_core/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config", "--disable-warnings"]
markers = [
    "asyncio: marks tests as requiring asyncio (deselect with '-m \"not asyncio\"')",
    "scenario: marks tests as scenario tests (select with '-m \"scenario\"')",
]

[tool.coverage.run]
omit = [
    "tests/*", # Exclude everything in tests/
]

[tool.mdformat]
number = true      # Renumber ordered lists
end_of_line = "lf"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
